--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "vercel": "^28.18.5"
   }
 }
